2A/05_Projet_GL/src/test/deca/context/invalid/complet/13_decl_filed_void.deca
// Description :
//     Decl champ avec le type void 
// Resultats :
//    ligne 9 : le type attendu doit etre différent du void 
// Historique :
//  cree le 16/01/2024

class A {
    void a ; 
}